unpackaged/main/default/objects/Titulacion__c/fields/Financiera_Formula__c.field-meta.xml
<CustomField>
    <fullName>Financiera_Formula__c</fullName>
    <formula>TEXT( Proceso_de_Venta__r.Financiera__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financiera</label>
    <type>Text</type>
</CustomField>