unpackaged/main/default/objects/Titulacion__c/fields/Formalizacion_Registrada__c.field-meta.xml
<CustomField>
    <fullName>Formalizacion_Registrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formalización Registrada</label>
    <type>Checkbox</type>
</CustomField>