unpackaged/main/default/objects/Titulacion__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>