unpackaged/main/default/objects/Titulacion__c/fields/Fraccionamiento_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Formula__c</fullName>
    <formula>Fraccionamiento__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>