unpackaged/main/default/objects/Titulacion__c/fields/Id_Usuario_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Id_Usuario_Ventas__c</fullName>
    <formula>Proceso_de_Venta__r.Asesor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Usuario Ventas</label>
    <type>Text</type>
</CustomField>