unpackaged/main/default/objects/Titulacion__c/fields/Importe_de_Aval_o__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_Aval_o__c</fullName>
    <label>Importe de Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>