unpackaged/main/default/objects/Titulacion__c/fields/Importe_de_la_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_la_Escritura__c</fullName>
    <label>Importe de la Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>