unpackaged/main/default/objects/Titulacion__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <formula>Plan_de_Venta__r.Manzana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manzana</label>
    <type>Text</type>
</CustomField>