unpackaged/main/default/objects/Titulacion__c/fields/Mayor_a_10_dias__c.field-meta.xml
<CustomField>
    <fullName>Mayor_a_10_dias__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &lt; TODAY()-10, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mayor a 10 dias</label>
    <type>Checkbox</type>
</CustomField>