unpackaged/main/default/objects/Titulacion__c/fields/Mensaje_Para__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_Para__c</fullName>
    <formula>Proceso_de_Venta__r.Asesor__r.FirstName &amp;&quot; &quot;&amp;  Proceso_de_Venta__r.Asesor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mensaje Para</label>
    <type>Text</type>
</CustomField>