unpackaged/main/default/objects/Titulacion__c/fields/Monto_de_Credito_Definitivo__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Credito_Definitivo__c</fullName>
    <label>Monto de Crédito Definitivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>