unpackaged/main/default/objects/Titulacion__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Estado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Folio</fullName>
            </value>
            <value>
                <fullName>Por Capturar</fullName>
            </value>
            <value>
                <fullName>Bajo Monto</fullName>
            </value>
            <value>
                <fullName>Fuera de Rango</fullName>
            </value>
            <value>
                <fullName>Sin Aportaciones</fullName>
            </value>
            <value>
                <fullName>Sin Relación Laboral</fullName>
            </value>
            <value>
                <fullName>Análisis</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Condicionado</fullName>
            </value>
            <value>
                <fullName>Inconsistencia</fullName>
            </value>
            <value>
                <fullName>Sin Avalúo</fullName>
            </value>
            <value>
                <fullName>Sin DTU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>