unpackaged/main/default/objects/Titulacion__c/fields/Motivo_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Rechazo__c</fullName>
    <label>Motivo de Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>