unpackaged/main/default/objects/Titulacion__c/fields/Nombre_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp;  Cliente__r.Id  &amp;&quot;/view&quot;, 
IF(
    OR(Cliente__r.RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;,
							Cliente__r.RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;,
							Cliente__r.RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;),
				   UPPER(Cliente__r.FirstName &amp; &quot; &quot; &amp; Cliente__r.LastName &amp; &quot; &quot; &amp; Cliente__r.Apellidomaterno_cta__c) ,
       UPPER(Cliente__r.Nombre__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo</label>
    <type>Text</type>
</CustomField>