unpackaged/main/default/objects/Titulacion__c/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notaría</label>
    <referenceTo>Notaria__c</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>