unpackaged/main/default/objects/Titulacion__c/fields/Notaria_Formula__c.field-meta.xml
<CustomField>
    <fullName>Notaria_Formula__c</fullName>
    <formula>Notaria__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notaria</label>
    <type>Text</type>
</CustomField>