unpackaged/main/default/objects/Titulacion__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <formula>Notaria__r.Notario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notario</label>
    <type>Text</type>
</CustomField>