unpackaged/main/default/objects/Titulacion__c/fields/Numero_de_Credito_3__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Credito_3__c</fullName>
    <label>Número de Crédito 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>