unpackaged/main/default/objects/Titulacion__c/fields/Numero_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Credito__c</fullName>
    <label>Número de Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>