unpackaged/main/default/objects/Titulacion__c/fields/Numero_de_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Escritura__c</fullName>
    <label>Número de Escritura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>