unpackaged/main/default/objects/Titulacion__c/fields/Numero_Interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior__c</fullName>
    <formula>Plan_de_Venta__r.Num_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Interior</label>
    <type>Text</type>
</CustomField>