unpackaged/main/default/objects/Titulacion__c/fields/Opciones_Pagare_Titulador__c.field-meta.xml
<CustomField>
    <fullName>Opciones_Pagare_Titulador__c</fullName>
    <label>Opciones Pagare Titulador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financiera</fullName>
            </value>
            <value>
                <fullName>Subsidio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>