unpackaged/main/default/objects/Titulacion__c/fields/Opp_Id_Proceso_AR__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id_Proceso_AR__c</fullName>
    <label>Opp Id Proceso AR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>