unpackaged/main/default/objects/Titulacion__c/fields/Pagares_Financiera_Count__c.field-meta.xml
<CustomField>
    <fullName>Pagares_Financiera_Count__c</fullName>
    <formula>Cobranza_Comercial__r.Pagare_financiera_Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pagarés Financiera Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>