unpackaged/main/default/objects/Titulacion__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>