unpackaged/main/default/objects/Titulacion__c/fields/Precio_Minimo_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Minimo_Solicitado__c</fullName>
    <formula>Plan_de_Venta__r.Precio_minimo_solicitado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Mínimo Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>