unpackaged/main/default/objects/Titulacion__c/fields/Proceso_Bloqueado_Ley_Antilavado__c.field-meta.xml
<CustomField>
    <fullName>Proceso_Bloqueado_Ley_Antilavado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso Bloqueado Ley Antilavado</label>
    <type>Checkbox</type>
</CustomField>