unpackaged/main/default/objects/Titulacion__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>