unpackaged/main/default/objects/Titulacion__c/fields/Proceso_de_Venta_Stage_TextVar__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta_Stage_TextVar__c</fullName>
    <label>Proceso de Venta Stage TextVar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>