unpackaged/main/default/objects/Titulacion__c/fields/Producto_de_la_Financiera_2__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_la_Financiera_2__c</fullName>
    <label>Producto de la Financiera 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Financiera_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCTO ABC CAPITAL</fullName>
            </value>
            <value>
                <fullName>PRODUCTO ALRA DEL SUR ASESRORIA HIP</fullName>
            </value>
            <value>
                <fullName>PRODUCTO AUTOFINCASA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANAMEX</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCA AFIRME SA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCO AZTECA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCO BX+</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCO DEL BAJIO SA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCO INMOBILIARIO MEXICANO</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANCO SANTANDER SERFIN SA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANJERCITO</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANORTE SA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANREGIO</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BANSEFI</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BBVA BANCOMER SA DE CV</fullName>
            </value>
            <value>
                <fullName>PRODUCTO BRADA HIPOTECARIA SA DE CV SOF</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA BUENOS AIRES SC AP RLCV</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA FLORENCIO ROSAS</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA POPULAR CRISTOBAL COLON</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA POPULAR MEXICANA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA POPULAR SAN RAFAEL S.C. D</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CAJA SAN NICOLAS</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CFE</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CITY HOME DEL CENTRO SA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CONSUMER &amp; BUSINESS LOAN</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CONTINGENCIA</fullName>
            </value>
            <value>
                <fullName>PRODUCTO CREDITO PARA TI SA DE CV SOFOM</fullName>
            </value>
            <value>
                <fullName>PRODUCTO DAE HIPOTECARIA SA DE CV SOFOM</fullName>
            </value>
            <value>
                <fullName>PRODUCTO DIRECCION PENSIONES ESTADO JAL</fullName>
            </value>
            <value>
                <fullName>PRODUCTO FOVISSSTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>