unpackaged/main/default/objects/Titulacion__c/fields/Producto_de_la_Financiera_3__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_la_Financiera_3__c</fullName>
    <label>Producto de la Financiera 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Producto_de_la_Financiera</valueSetName>
    </valueSet>
</CustomField>