unpackaged/main/default/objects/Titulacion__c/fields/Producto_de_la_Financiera_Formula__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_la_Financiera_Formula__c</fullName>
    <formula>TEXT(Proceso_de_Venta__r.Producto_de_la_Financiera__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto de la Financiera</label>
    <type>Text</type>
</CustomField>