unpackaged/main/default/objects/Titulacion__c/fields/Producto_Financiero_Formula__c.field-meta.xml
<CustomField>
    <fullName>Producto_Financiero_Formula__c</fullName>
    <formula>TEXT(Proceso_de_Venta__r.Producto_financiero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto Financiero</label>
    <type>Text</type>
</CustomField>