unpackaged/main/default/objects/Titulacion__c/fields/Promo_Precio_en_Rango_de_Fechas__c.field-meta.xml
<CustomField>
    <fullName>Promo_Precio_en_Rango_de_Fechas__c</fullName>
    <formula>AND(TODAY() &gt; Vigencia_desde__c, TODAY() &lt;  Vigencia_hasta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Precio en Rango de Fechas</label>
    <type>Checkbox</type>
</CustomField>