unpackaged/main/default/objects/Titulacion__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prototipo</label>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Titulaciones</relationshipLabel>
    <relationshipName>Titulaciones</relationshipName>
    <type>Lookup</type>
</CustomField>