unpackaged/main/default/objects/Titulacion__c/fields/Prototipo_Formula__c.field-meta.xml
<CustomField>
    <fullName>Prototipo_Formula__c</fullName>
    <formula>Prototipo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipo</label>
    <type>Text</type>
</CustomField>