unpackaged/main/default/objects/Titulacion__c/fields/Regimen_Fiscal_SAT__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal_SAT__c</fullName>
    <label>Régimen Fiscal / SAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>601	General de Ley Personas Morales</fullName>
            </value>
            <value>
                <fullName>603	Personas Morales con Fines no Lucrativos</fullName>
            </value>
            <value>
                <fullName>605	Sueldos y Salarios e Ingresos Asimilados a Salarios</fullName>
            </value>
            <value>
                <fullName>606	Arrendamiento</fullName>
            </value>
            <value>
                <fullName>607	Régimen de Enajenación o Adquisición de Bienes</fullName>
            </value>
            <value>
                <fullName>608	Demás ingresos</fullName>
            </value>
            <value>
                <fullName>610	Residentes en el Extranjero sin Establecimiento Permanente en México</fullName>
            </value>
            <value>
                <fullName>611	Ingresos por Dividendos (socios y accionistas)</fullName>
            </value>
            <value>
                <fullName>612	Personas Físicas con Actividades Empresariales y Profesionales</fullName>
            </value>
            <value>
                <fullName>614	Ingresos por intereses</fullName>
            </value>
            <value>
                <fullName>615	Régimen de los ingresos por obtención de premios</fullName>
            </value>
            <value>
                <fullName>616	Sin obligaciones fiscales</fullName>
            </value>
            <value>
                <fullName>620	Sociedades Cooperativas de Producción que optan por diferir sus ingresos</fullName>
            </value>
            <value>
                <fullName>621	Incorporación Fiscal</fullName>
            </value>
            <value>
                <fullName>622	Actividades Agrícolas, Ganaderas, Silvícolas y Pesqueras</fullName>
            </value>
            <value>
                <fullName>623	Opcional para Grupos de Sociedades</fullName>
            </value>
            <value>
                <fullName>624	Coordinados</fullName>
            </value>
            <value>
                <fullName>625	Régimen de las Actividades Empresariales con ingresos a través de Plataformas Tecnológicas</fullName>
            </value>
            <value>
                <fullName>626	Régimen Simplificado de Confianza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>