unpackaged/main/default/objects/Titulacion__c/fields/Revision_APC__c.field-meta.xml
<CustomField>
    <fullName>Revision_APC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisión APC</label>
    <type>Checkbox</type>
</CustomField>