unpackaged/main/default/objects/Titulacion__c/fields/Sobreprecio__c.field-meta.xml
<CustomField>
    <fullName>Sobreprecio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sobreprecio</label>
    <type>Checkbox</type>
</CustomField>