unpackaged/main/default/objects/Titulacion__c/fields/Solicitud_de_Modificacion_de_VO_Hyper__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Modificacion_de_VO_Hyper__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Cobranza_Comercial__c/&quot; &amp;  Cobranza_Comercial__r.Id &amp; &quot;/view&quot;, &quot;Solicitar Modificación VO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitud de Modificación de VO</label>
    <type>Text</type>
</CustomField>