unpackaged/main/default/objects/Titulacion__c/fields/Sub_Estado__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estado__c</fullName>
    <label>Sub Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completo por Integracion Infonavit</fullName>
            </value>
            <value>
                <fullName>Desperfilado</fullName>
            </value>
            <value>
                <fullName>Emision</fullName>
            </value>
            <value>
                <fullName>Escriturado</fullName>
            </value>
            <value>
                <fullName>Instrucción Financiera</fullName>
            </value>
            <value>
                <fullName>Notaria</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Puntos a Futuro</fullName>
            </value>
            <value>
                <fullName>Subsidio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>