unpackaged/main/default/objects/Titulacion__c/fields/Sub_Estatus_del_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Sub_Estatus_del_Proceso__c</fullName>
    <label>Sub Estatus Titulación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
                <default>true</default>
                <label>En Progreso</label>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>En Firmas</fullName>
            </value>
            <value>
                <fullName>Por Entregar</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Reserva</fullName>
            </value>
            <value>
                <fullName>En aclaración</fullName>
                <label>En Aclaración</label>
            </value>
            <value>
                <fullName>Cancelado por Reubicación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>