unpackaged/main/default/objects/Titulacion__c/fields/Subestatus_Cobranza_Comercial_Formula__c.field-meta.xml
<CustomField>
    <fullName>Subestatus_Cobranza_Comercial_Formula__c</fullName>
    <formula>TEXT(Cobranza_Comercial__r.Sub_Estatus_Proceso__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subestatus Cobranza Comercial</label>
    <type>Text</type>
</CustomField>