unpackaged/main/default/objects/Titulacion__c/fields/Sueldo_Neto__c.field-meta.xml
<CustomField>
    <fullName>Sueldo_Neto__c</fullName>
    <label>Sueldo Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>