unpackaged/main/default/objects/Titulacion__c/fields/Suma_Total_de_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Suma_Total_de_Pagares__c</fullName>
    <formula>Cobranza_Comercial__r.Suma_Pagares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suma de Pagarés VE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>