unpackaged/main/default/objects/Titulacion__c/fields/Tipo_de_Credito_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Credito_Formula__c</fullName>
    <formula>TEXT( Proceso_de_Venta__r.Tipo_de_Credito__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Crédito</label>
    <type>Text</type>
</CustomField>