unpackaged/main/default/objects/Titulacion__c/fields/Tipo_de_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Notificacion__c</fullName>
    <label>Tipo de Notificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notificación a Ventas</fullName>
            </value>
            <value>
                <fullName>Solicitud de Modificación de VO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>