unpackaged/main/default/objects/Titulacion__c/fields/Unidad_de_Valuaci_n__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_Valuaci_n__c</fullName>
    <label>Unidad de Valuación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1 AVALUOS Y UNIDAD DE VALUACION, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>ABC APPRAISERS DE MÉXICO, S. A. DE C. V.</fullName>
            </value>
            <value>
                <fullName>AVALUOS GLISON, S.A. DE C.V</fullName>
            </value>
            <value>
                <fullName>AVALUOS INTEGRALES DEL NORTE, S.A DE C.V.</fullName>
            </value>
            <value>
                <fullName>AVALUOS Y ASOCIADOS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>AVALUOS Y SUPERVISIONES CABELLO FLORES, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>BUFETE DE AVALUOS, S.A.</fullName>
            </value>
            <value>
                <fullName>CONSULTORIA EN VALUACION INTEGRAL, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>ECO AVALUOS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>INTEGRADORA Y SOLUCIONES CARRERA, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>NO APLICA</fullName>
            </value>
            <value>
                <fullName>TASACIONES Y AVALUOS, S.A.P.I. DE C.V.</fullName>
            </value>
            <value>
                <fullName>TERA AVALUOS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>UVA UNIDAD DE VALUACIÓN ABALKAN S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>VALOR COMERCIAL AVALUOS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>VIASC GRUPO INMOBILIARIO S.A.DE C.V.</fullName>
            </value>
            <value>
                <fullName>BANORTE</fullName>
            </value>
            <value>
                <fullName>EGP EVALUACION Y GESTION DE PROYECTOS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>UNIDAD DE VALUACION GLOBAL, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>VALORES Y SUPERFICIES INMOBILIARIAS, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>VALUACION PROFESIONAL MEXICANA, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>AVALUOS AAA, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>CAJA POPULAR MEXICANA</fullName>
            </value>
            <value>
                <fullName>CONSOLIDADO ALAMEDA, S.A.P.I DE C.V.</fullName>
            </value>
            <value>
                <fullName>CORPORACION MEXICANA DE VALUACION, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>VALUACION DE PROYECTOS VAPROY, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>AVALUOS Y CONSULTORIA TECNICAS, SA DE CV</fullName>
            </value>
            <value>
                <fullName>ESTELA MALDONADO</fullName>
            </value>
            <value>
                <fullName>INGENIERIA INTEGRAL DE VALUACION, S.A. DE C.V.</fullName>
            </value>
            <value>
                <fullName>NOTARIA 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>