unpackaged/main/default/objects/Titulacion__c/fields/Unidad_Privativa__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Privativa__c</fullName>
    <formula>Plan_de_Venta__r.Unidad_Privativa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidad Privativa</label>
    <type>Text</type>
</CustomField>