unpackaged/main/default/objects/Titulacion__c/fields/URL_Modificacion_de_Pagares__c.field-meta.xml
<CustomField>
    <fullName>URL_Modificacion_de_Pagares__c</fullName>
    <formula>&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Plan_de_Venta__c/a2a23000000OmlmAAC/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Modificación de Pagares</label>
    <type>Text</type>
</CustomField>