unpackaged/main/default/objects/Titulacion__c/fields/Valor_Aval_o__c.field-meta.xml
<CustomField>
    <fullName>Valor_Aval_o__c</fullName>
    <label>Valor Avalúo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>