unpackaged/main/default/objects/Titulacion__c/fields/Vigencia_desde__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_desde__c</fullName>
    <formula>Plan_de_Venta__r.Vigencia_desde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia desde</label>
    <type>Date</type>
</CustomField>