unpackaged/main/default/objects/Titulacion__c/fields/Vigencia_hasta__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_hasta__c</fullName>
    <formula>Plan_de_Venta__r.Vigencia_hasta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia hasta</label>
    <type>Date</type>
</CustomField>